--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "figlet": "^1.5.2",
-    "mongodb": "^4.8.1"
+    "mongodb": "^4.8.1",
+    "mongoose": "^6.5.2"
   }
 }
